<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/oldPassword_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password" />

        <EditText
            android:id="@+id/oldPassword_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/newPassword_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/newPassword_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/repeatPassword_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_new_password"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/repeatPassword_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/change_password_button"
            android:text="@string/update_password_button"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>